tests/NormalTests/paczka1/fuzzy1/81718692.err
Error in line 4: ZWzVZ S714 54,7
Error in line 11: tVXhuxiTKuZ S683 60,4
Error in line 7: ZWzVZ S683 40,0
Error in line 30: tVXhuxiTKuZ A973 35,4
Error in line 36: 9zHvRhjZdwQ S683 38,49
Error in line 33: 9zHvRhjZdwQ S683 82,3
